# NPC_Controler

./: CMakeLists.txt  README.md
components/API/: API.c  CMakeLists.txt
components/API/include/: API.h
components/API_controler/: API_controler.c  CMakeLists.txt
components/API_controler/include/: API_controler.h
components/DALI_addressing/: CMakeLists.txt  DALI_addressing.c
components/DALI_addressing/include/: DALI_addressing.h
components/DALI_commands/: CMakeLists.txt
components/DALI_commands/include/: DALI_commands.h
components/DALI_communication/: CMakeLists.txt  DALI_communication.c
components/DALI_communication/include/: DALI_communication.h
components/DALI_diagnostics_and_maintenance/: CMakeLists.txt  DALI_diagnostics_and_maintenance.c
components/DALI_memory_bank_handler/: CMakeLists.txt  DALI_memory_bank_handler.c
components/DALI_transmit/: CMakeLists.txt  DALI_transmit.c
components/DALI_transmit/include/: DALI_transmit.h
components/Http_handler/: CMakeLists.txt  Http_handler.c
components/Input_button/: CMakeLists.txt  Input_button.c
components/Input_button/include/: Input_button.h
components/JSON_handler/: CMakeLists.txt  JSON_handler.c
components/Memory_bank_handler/: CMakeLists.txt  Memory_bank_handler.c
components/Nvs_handler/: CMakeLists.txt  Nvs_handler.c
components/State_manager/: CMakeLists.txt  State_manager.c
components/Synchronizer/: CMakeLists.txt  Synchronizer.c
components/Tcp_server/: CMakeLists.txt  Tcp_server.c
components/Wifi_provisioning/: CMakeLists.txt  Wifi_provisioning.c
components/Wifi_provisioning/include/: Wifi_provisioning.h
components/mDNS_handler/: CMakeLists.txt  mDNS_handler.c
main/: CMakeLists.txt  DALI_addressing.c  DALI_addressing.h  DALI_transmit.c  DALI_transmit.h  constants.h  hello_world_main.c  idf_component.yml  main.c
main/custom_components/: DALI_transmit.c  DALI_transmit.h
(+18 files in other folders)
