
idf_component_register(SRCS "DALI_addressing.c"
                       INCLUDE_DIRS "include" "../DALI_addressing/include" "../DALI_commands/include" "../DALI_communication/include" "../components/esp_driver_gpio/include" "../components/esp_driver_gptimer/include" "../../main" "../device/include")
