
idf_component_register(SRCS "DALI_communication.c"
                       INCLUDE_DIRS "include" "../components/log" "../components/esp_driver_gptimer/include" "../components/esp_driver_gpio/include" "../DALI_communication/include" "../components/wifi_provisioning/include" "../components/protocomm/include/common" "../components/protocomm/include/security" "../components/esp_event/include" "../components/esp_wifi/include" "../components/esp_netif/include")
