
idf_component_register(SRCS "Input_button.c"
                       INCLUDE_DIRS "include" "../components/esp_driver_gpio/include" "../components/wifi_provisioning/include" "../components/protocomm/include/common" "../components/protocomm/include/security" "../components/esp_event/include" "../components/esp_wifi/include" "../components/esp_netif/include" "../Nvs_handler/include")
