
idf_component_register(SRCS "Wifi_provisioning.c"
                       INCLUDE_DIRS "include" "../components/esp_wifi/include" "../components/xtensa/include/xtensa/" "../components/esp_event/include" "../components/esp_netif/include" "../components/nvs_flash/include" "../components/esp_partition/include" "../components/wifi_provisioning/include" "../components/protocomm/include/common" "../components/protocomm/include/security" "../components/protocomm/include/transports")
